[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://pack.png" type="Texture" id=3]
[ext_resource path="res://ground.png" type="Texture" id=4]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://HealthUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Menus.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/Menus.gd" type="Script" id=8]
[ext_resource path="res://Scenes/StartMenu.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/GameOver.tscn" type="PackedScene" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 6.05905

[sub_resource type="Animation" id=2]
resource_name = "dead"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("CPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "die"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "life_lost"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0784314 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0784314 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0784314 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0.137 ), 0.0, 0.0, 0, 0, Vector2( 0.133854, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.993378 )
colors = PoolColorArray( 0.768627, 0.0705882, 0.0705882, 1, 0.92549, 0.176471, 0.176471, 0.192157 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 154, 10 )

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;
uniform float speed;
void fragment(){
	vec2 uv = UV;
	uv.x = uv.x + TIME * speed;
	COLOR = texture(TEXTURE, uv);
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/speed = 3.0

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 33.9272, 122.436 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 16, 32, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
visible = false
position = Vector2( -0.0142097, 0.944083 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="Player"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Player/Area2D"]
visible = false
position = Vector2( -0.0142097, 0.944084 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
playback_speed = 2.0
anims/dead = SubResource( 2 )
anims/life_lost = SubResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Player"]
emitting = false
amount = 50
one_shot = true
emission_shape = 1
emission_sphere_radius = 5.0
spread = 180.0
gravity = Vector2( 0, 10 )
initial_velocity = 10.0
angle = 720.0
angle_random = 1.0
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 111.913, 140.084 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 8.087, 0.916 )
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]

[node name="Tree_Spawner" type="Timer" parent="."]
autostart = true

[node name="Polygon2D" type="Polygon2D" parent="."]
material = SubResource( 8 )
position = Vector2( -12, -39 )
scale = Vector2( 1.07885, 1.30769 )
texture = ExtResource( 4 )
polygon = PoolVector2Array( 0, 130, 260, 130, 260, 143, 0, 143 )

[node name="HUD" parent="." instance=ExtResource( 5 )]
margin_left = 122.0
margin_top = -4.0
margin_right = 126.0
margin_bottom = -4.0

[node name="HealthUI" parent="." instance=ExtResource( 6 )]
visible = false

[node name="MenuLayer" parent="." instance=ExtResource( 7 )]
script = ExtResource( 8 )

[node name="StartMenu" parent="MenuLayer" instance=ExtResource( 9 )]

[node name="GameOver" parent="MenuLayer" instance=ExtResource( 10 )]
visible = false

[node name="Tween" type="Tween" parent="MenuLayer"]
[connection signal="area_entered" from="Player/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Tree_Spawner" to="." method="_on_Tree_Spawner_timeout"]
[connection signal="start_game" from="MenuLayer" to="." method="_on_MenuLayer_start_game"]
[connection signal="button_down" from="MenuLayer/GameOver/Button" to="MenuLayer" method="_on_Button_button_down"]

[editable path="MenuLayer/GameOver"]
